Centered mid-div and fixed spacing issues.

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -230,7 +230,7 @@ address {
 
 .services-mid-content {
 	display: flex;
-	/* justify-content: center; */
+	justify-content: center;
 	flex-wrap: wrap;
 	margin: 0 auto;
 	border-bottom: 2px solid black;
@@ -277,12 +277,11 @@ address {
 
 .services-bottom-content img {
 	margin-right: 50px;
-	padding-right: 50px;
+	padding-right: 10px;
 }
 
 .facts {
-	padding: 20px;
-	padding-right: 10px;
+	padding: 0 10px 20px 60px;
 }
 
 .facts p {
